--- a/AppRecetas/package.json
+++ b/AppRecetas/package.json
@@ -21,12 +21,16 @@
     "@angular/platform-browser": "^18.0.0",
     "@angular/platform-browser-dynamic": "^18.0.0",
     "@angular/router": "^18.0.0",
+    "@aws-amplify/ui-angular": "^5.0.33",
     "@capacitor/app": "6.0.2",
     "@capacitor/core": "6.2.0",
     "@capacitor/haptics": "6.0.2",
     "@capacitor/keyboard": "6.0.3",
     "@capacitor/status-bar": "6.0.2",
     "@ionic/angular": "^8.0.0",
+    "amazon-cognito-identity-js": "^6.3.12",
+    "aws-amplify": "^6.10.0",
+    "global": "^4.4.0",
     "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
