--- a/AppRecetas/package.json
+++ b/AppRecetas/package.json
@@ -30,6 +30,8 @@
     "@ionic/angular": "^8.0.0",
     "amazon-cognito-identity-js": "^6.3.12",
     "aws-amplify": "^6.10.0",
+    "cors": "^2.8.5",
+    "express": "^4.21.1",
     "global": "^4.4.0",
     "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
